Fixed sticky footer. Was acting weird on mobile.

--- a/src/AppBundle/Resources/private/less/main.less
+++ b/src/AppBundle/Resources/private/less/main.less
@@ -1,34 +1,50 @@
+html,
 body {
-  overflow-x: hidden; /* Prevent scroll on narrow devices */
+  height: 100%;
 }
 
-#wrapper {
-  margin-top: 70px;
-}
+body {
+  // Prevent scroll on narrow devices
+  overflow-x: hidden;
+  padding-top: 60px;
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
+  > #wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -60px;
+  }
 
-  .container .text-muted {
-    margin: 20px 0;
+  > #wrapper > #push,
+  > #footer {
+    height: 60px;
+  }
+
+  > #footer {
+    background-color: #f5f5f5;
+
+    > .container :first-child {
+      margin: 20px 0 0 0;
+    }
   }
 }
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-.table > tbody > tr > td {
-  vertical-align: middle;
+// Responsive CSS fixes
+@media (max-width: 767px) {
+  #footer {
+    margin-left: -30px;
+    margin-right: -30px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 h1 {
   font-size: 22px;
   border-bottom: 1px solid #ccc;
   padding: 9px 0;
+}
+
+.table > tbody > tr > td {
+  vertical-align: middle;
 }
