--- a/src/AppBundle/Resources/private/less/offcanvas.less
+++ b/src/AppBundle/Resources/private/less/offcanvas.less
@@ -1,3 +1,7 @@
+.sidebar-offcanvas :first-child {
+  padding-top: 20px;
+}
+
 @media screen and (max-width: 767px) {
   .row-offcanvas {
     position: relative;
